[project]
name = "dsa-ml-practice"
version = "0.1.0"
description = "Terminal-native Python, DSA, LeetCode, and ML practice workspace."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "ipython>=9.0.0",
]

[project.optional-dependencies]
ml = [
  "matplotlib>=3.10.0",
  "numpy>=2.0.0",
  "pandas>=2.2.0",
  "scikit-learn>=1.5.0",
]
